--- a/plugin.xml
+++ b/plugin.xml
@@ -12,6 +12,7 @@
 
   <preference name="LEAN_APP_ID"/>
   <preference name="LEAN_APP_KEY"/>
+  <preference name="LEAN_PUSH_CERTIFICATE"/>
 
   <platform name="ios">
     <config-file parent="/*" target="config.xml">
@@ -23,6 +24,7 @@
       </feature>
       <preference name="leancloud-appid" value="$LEAN_APP_ID"/>
       <preference name="leancloud-appkey" value="$LEAN_APP_KEY"/>
+      <preference name="leancloud-push-certificate" value="$LEAN_PUSH_CERTIFICATE"/>
     </config-file>
 
     <!-- Plugin source code -->
@@ -58,6 +60,7 @@
       </feature>
       <preference name="leancloud-appid" value="$LEAN_APP_ID"/>
       <preference name="leancloud-appkey" value="$LEAN_APP_KEY"/>
+      <preference name="leancloud-push-certificate" value="$LEAN_PUSH_CERTIFICATE"/>
     </config-file>
     <config-file target="AndroidManifest.xml" parent="/manifest">
       <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -81,16 +84,13 @@
     <source-file src="src/android/LeanApplication.java" target-dir="src/leancloud/cordova/leanpush"/>
     <source-file src="src/android/LeanPush.java" target-dir="src/leancloud/cordova/leanpush"/>
     <source-file src="src/android/LeanAnalytics.java" target-dir="src/leancloud/cordova/leanpush"/>
-    <source-file src="src/android/leancloud/avoscloud-mixpush-v3.16.2.jar" target-dir="libs" framework="true"/>
-    <source-file src="src/android/leancloud/avoscloud-push-v3.16.2.jar" target-dir="libs" framework="true"/>
-    <source-file src="src/android/leancloud/avoscloud-sdk-v3.16.2.jar" target-dir="libs" framework="true"/>
-    <source-file src="src/android/leancloud/avoscloud-statistics-v3.16.2.jar" target-dir="libs" framework="true"/>
-    <source-file src="src/android/leancloud/fastjson.jar" target-dir="libs" framework="true"/>
-    <source-file src="src/android/leancloud/HwPush_SDK_V2705.jar" target-dir="libs" framework="true"/>
+    <source-file src="src/android/leancloud/avoscloud-push-v4.4.0.jar" target-dir="libs" framework="true"/>
+    <source-file src="src/android/leancloud/avoscloud-sdk-v4.4.0.jar" target-dir="libs" framework="true"/>
+    <source-file src="src/android/leancloud/fastjson-1.2.30.jar" target-dir="libs" framework="true"/>
     <source-file src="src/android/leancloud/Java-WebSocket-1.3.2-leancloud.jar" target-dir="libs" framework="true"/>
-    <source-file src="src/android/leancloud/MiPush_SDK_Client_3_2_2.jar" target-dir="libs" framework="true"/>
-    <source-file src="src/android/leancloud/okhttp-2.6.0-leancloud.jar" target-dir="libs" framework="true"/>
-    <source-file src="src/android/leancloud/okio-1.6.0-leancloud.jar" target-dir="libs" framework="true"/>
+    <source-file src="src/android/leancloud/okhttp-3.8.0.jar" target-dir="libs" framework="true"/>
+    <source-file src="src/android/leancloud/okio-1.13.0.jar" target-dir="libs" framework="true"/>
     <source-file src="src/android/leancloud/protobuf-java-2.6.1.jar" target-dir="libs" framework="true"/>
+    <source-file src="src/android/leancloud/avoscloud-statistics-v4.4.0.jar" target-dir="libs" framework="true"/>
   </platform>
 </plugin>
